fixed documents, added text-overflow: ellipsis, edit adverts

--- a/src/assets/styles/files/files.css
+++ b/src/assets/styles/files/files.css
@@ -23,14 +23,11 @@
     position: relative;
     margin: .5rem 0;
     border: 1px solid lightgrey;
-    /* SPI */
-    height: 6.5rem;
-    text-indent: 1.3rem;
 }
 
 .documents-tiles-row-header,
 .documents-tiles-row-header-open {
-    padding: .5rem;
+    padding: 2rem;
     color: black;
     color: #7b7777;
     font-weight: bold;
@@ -207,9 +204,6 @@
     .documents-tiles-row {
         width: 95%;
         border-radius: 3px;
-        /* SPI */
-        height: 6.5rem;
-        text-indent: 1.3rem;
     }
     .documents-tile-1-3 {
         width: 95%;
